[ARM] PR rtl-optimization/69904: Disallow copying/duplicating of load-exclusive operations

PR rtl-optimization/69904
	* config/arm/arm.c (arm_cannot_copy_insn_p):
	Return true for load-exclusive instructions.

	* gcc.target/arm/pr69904.c: New test.

From-SVN: r233941